--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^8.0.7"
+    "react-icons": "^4.11.0",
+    "react-markdown": "^8.0.7",
+    "react-zoom-pan-pinch": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
