--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-markdown": "^8.0.7",
-    "react-zoom-pan-pinch": "^3.1.0"
+    "react-zoom-pan-pinch": "^3.1.0",
+    "react-router": "^6.13.0",
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
